Convert URLs of Android files to ArcUrls.

Android container now supports content urls with /external_files to access all
files on emulated external storage.
We need to convert URLs under /run/arc/sdcard/write/emulated/0 on Chrome OS side
to the content URLs.
To share the path to Android files, the definition of kAndroidFilesPath is moved
from volume_manager to path_util.

Bug: 855982
Test: Manually tested on Kevin and Eve with a patch ag/4411504 on Android.
Change-Id: Idb6fbd9aa697c306d953b0bcb7cf332ec9a26c19
Reviewed-on: https://chromium-review.googlesource.com/1113169
Commit-Queue: Naoki Fukino <fukino@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570001}
Former-commit-id: a956143e09b3083ea7bc0c142f8a11bc24493540